webhook blog updates

--- a/_drafts/2023-06-10-webhooks.md
+++ b/_drafts/2023-06-10-webhooks.md
@@ -8,9 +8,11 @@ This article is a based on the talk of the same name given to the 2023 Preservic
 
 ### Introduction to webhooks and APIs
 
-Webhooks are a type of API which allow apps to stay up-to-date with real-time information. Webhooks are also called event-driven APIs and are typically used to provide other applications with real-time data. 
+Webhooks are a type of API which allow apps to stay up-to-date with real-time information. Webhooks are 
+also called event-driven APIs and are typically used to provide other applications with real-time data.
 
-Using webhooks, applications can send you data automatically when certain events are triggered.
+Using webhooks, applications can send you data automatically to 3rd party systems when certain events are triggered with
+Preservica.
 
 This allows to custom business processes to be created based on events within Preservica
 
@@ -21,14 +23,16 @@ This allows to custom business processes to be created based on events within Pr
 
 Webhooks are a new API introduced in Preservica v6.8.  They are based on a publisher-subscriber pattern.
 
-Preservica is the publisher and will send messages to all registered subscribers when certain events are triggered within the system.
+Preservica is the publisher and will send messages to all registered subscribers when certain events are 
+triggered within the system.
 
-The key difference between webhooks and traditional APIs is Who triggers the process. With traditional APIs the trigger is an event outside of Preservica and with webhooks the trigger is an event inside Preservica.
+The key difference between webhooks and traditional APIs is Who triggers the process. 
+With traditional APIs the trigger is an event outside of Preservica and with webhooks the trigger is an 
+event inside Preservica. The result is that you do not have to continually poll Preservica to get new information. 
 
 Webhooks work best when you need to take some action when something new has happened within Preservica.
 
-
-Preservica has provided two events as part of the first webhook release with v6.8
+Preservica has provided two events as part of the first webhook release with Preservica v6.8
 
  
  * Ingesting Assets
@@ -40,14 +44,22 @@ Preservica has provided two events as part of the first webhook release with v6.
 
 The webhook API is documented in the official Preservica [Swagger pages](https://demo.preservica.com/api/webhook/documentation.html) and the 3rd party [pyPreservica](https://pypreservica.readthedocs.io/en/latest/webhooks.html) Python SDK
 
+ ![Swagger](/public/images/swagg1.png)
+
+The following examples will use the Preservica SDK [pyPreservica](https://pypreservica.readthedocs.io/en/latest/webhooks.html) 
 
 ### Subscribing
 
 Before a system can receive notifications from Preservica, it must subscribe to a notification trigger.
 
-When creating a new subscription service, you need to generate a shared secret key and pass it as an argument to the subscribe method. This is then used by the web server to verify the messages sent by Preservica are genuine (spoofing attacks). 
+When creating a new subscription service, you need to generate a shared secret key and pass it as an argument to the 
+subscribe method. This is then used by the subscriber to verify the messages sent by Preservica (publisher) are genuine 
+(spoofing attacks). 
 
-Using the PyPreservica SDK to create a new subscription to Ingested events
+Using the PyPreservica SDK to create a new subscription to Ingested events, you pass the address of a web service which
+can receive HTTP POST requests. This could be a web server or some API gateway service. If you use a web server it 
+must be a publicly accessible endpoint. If your running a local server for testing purposes it will need to use some 
+kind of ingress service to make your local server accessible.
 
 
 ```python
@@ -55,25 +67,86 @@ from pyPreservica import *
 
 webhook = WebHooksAPI()
 
-subscription = webhook.subscribe("http://my-webhook.com:8080", TriggerType.INDEXED, "secret_key")
+subscription = webhook.subscribe("http://my-webhook.com:8080", TriggerType.INDEXED, "my secret key!")
+
+```
+During the subscription process, Preservica will send a challenge response message to the specified 
+endpoint URL to verify that it exists. 
+
+Preservica will make a POST request to the URL with a challengeCode query parameter. 
+The server must respond with the expected challenge response or the subscription will fail. 
+The challenge response must take the form of a simple json document:
+
+
+```python
+{
+  "challengeCode": "challengeCode",
+  "challengeResponse": "hexHmac256Response"
+}
 
 ```
 
+where hexHmac256Response is a hex hmac256 of the challengeCode using the secret as the hmac key. Therefore,
+the server will need a copy of the secret key.
 
 
 ### Receiving Events
 
-To receive web hook notifications pyPreservica has provided a reference web server implementation which provides support for the negotiation of the challenge request handshake during the subscription request and verification of each webhook event request.
+To receive web hook notifications pyPreservica has provided a reference web server implementation which provides 
+support for the negotiation of the challenge request handshake during the subscription request and 
+verification of each webhook event request.
 
-To implement the web server, extend the base class WebHookHandler and implement a single method do_WORK() this method is called every time Preservica calls the web hook. This method is therefore where any processing takes place.  
-
-
+To implement the web server, extend the base class WebHookHandler and implement a 
+single method do_WORK() this method is called every time Preservica calls the web hook. 
+This method is therefore where any processing takes place. 
 
 ```python
 
 class MyWebhook(WebHookHandler):
   def do_WORK(json):
+      # Do something useful
    
+
+```
+
+Therefore, the following is an example Python web server which can respond to Preservica web hooks, 
+the web server downloads the thumbnail for every ingested asset.
+
+```python
+from http.server import HTTPServer
+from sys import argv
+from pyPreservica import *
+
+BIND_HOST = '0.0.0.0'
+PORT = 8080
+
+
+class MyWebHook(WebHookHandler):
+    def do_WORK(self, json_payload):
+        for reference in list(json_payload['events']):
+            ref = reference['entityRef']
+            asset = self.server.client.asset(ref)
+            self.server.client.thumbnail(asset, f"{ref}.jpg")
+            print(asset)
+
+
+if __name__ == '__main__':
+
+    config = configparser.ConfigParser(interpolation=configparser.Interpolation())
+    config.read('credentials.properties', encoding='utf-8')
+    secret_key = config['credentials']['secret.key']
+
+    if len(argv) > 1:
+        arg = argv[1].split(':')
+        BIND_HOST = arg[0]
+        PORT = int(arg[1])
+
+    print(f'Listening on http://{BIND_HOST}:{PORT}\n')
+
+    httpd = HTTPServer((BIND_HOST, PORT), MyWebHook)
+    httpd.secret_key = secret_key
+    httpd.client = EntityAPI()
+    httpd.serve_forever()
 
 ```
 
