webhook blog updates

--- a/_drafts/2023-06-10-webhooks.md
+++ b/_drafts/2023-06-10-webhooks.md
@@ -48,13 +48,16 @@ The webhook API is documented in the official Preservica [Swagger pages](https:/
 
 The following examples will use the Preservica SDK [pyPreservica](https://pypreservica.readthedocs.io/en/latest/webhooks.html) 
 
+ ![pyPreservica](/public/images/pyPreservica1.png)
+
+
 ### Subscribing
 
 Before a system can receive notifications from Preservica, it must subscribe to a notification trigger.
 
 When creating a new subscription service, you need to generate a shared secret key and pass it as an argument to the 
 subscribe method. This is then used by the subscriber to verify the messages sent by Preservica (publisher) are genuine 
-(spoofing attacks). 
+(to prevent spoofing attacks). 
 
 Using the PyPreservica SDK to create a new subscription to Ingested events, you pass the address of a web service which
 can receive HTTP POST requests. This could be a web server or some API gateway service. If you use a web server it 
@@ -109,8 +112,12 @@ class MyWebhook(WebHookHandler):
 
 ```
 
-Therefore, the following is an example Python web server which can respond to Preservica web hooks, 
-the web server downloads the thumbnail for every ingested asset.
+The handler can then be used to create a web server, the web server should be run from the same directory as a 
+pyPreservica credential.properties file containing the shared secret which was used earlier to create 
+the web hook subscription.
+
+The following is an example Python web server which can respond to Preservica web hooks.
+In this example the web hook server downloads the thumbnail image for every ingested asset.
 
 ```python
 from http.server import HTTPServer
@@ -127,7 +134,6 @@ class MyWebHook(WebHookHandler):
             ref = reference['entityRef']
             asset = self.server.client.asset(ref)
             self.server.client.thumbnail(asset, f"{ref}.jpg")
-            print(asset)
 
 
 if __name__ == '__main__':
@@ -149,5 +155,95 @@ if __name__ == '__main__':
     httpd.serve_forever()
 
 ```
+The web server can be then be started from the command line using.
 
 
+```bash
+  $ python3 server.py 0.0.0.0:8000
+```
+
+### Use Case:  Custom Notifications
+
+This use case shows how we can chain webhooks together to allow 3rd party systems to communicate with each other.
+We are going to use Microsoft Teams as the 3rd party system as Teams provides incoming webhook functionality.
+We can connect an outgoing Preservica webhook to an incoming teams webhook to transfer information into Teams.
+
+ ![UseCase](/public/images/usecase1.PNG)
+
+The end result is that every Asset ingested into Preservica will automatically 
+send a notification into a Microsoft Teams channel. 
+
+We will use the python library pymsteams to help create the 
+[messages](https://learn.microsoft.com/en-us/microsoftteams/platform/webhooks-and-connectors/how-to/connectors-using?tabs=cURL)
+
+Our web hook server now looks like:
+
+
+```python
+from http.server import HTTPServer
+from sys import argv
+from pyPreservica import *
+import pymsteams
+
+BIND_HOST = '0.0.0.0'
+PORT = 8080
+
+class MyWebHook(WebHookHandler):
+    
+    def teams_message(self, asset):
+        myTeamsMessage = pymsteams.connectorcard(self.server.teams_url)
+        myTeamsMessage.color("red")
+        # create the section
+        myMessageSection = pymsteams.cardsection()
+        myTeamsMessage.title("Preservica has ingested a new asset")
+
+        # Section Title
+        myMessageSection.title(asset.title)
+        # Facts are key value pairs displayed in a list.
+        myMessageSection.addFact("Asset Title", asset.title)
+        myMessageSection.addFact("Asset Description", asset.description)
+
+        for bitstream in self.server.client.bitstreams_for_asset(asset):
+            myMessageSection.addFact("BitStream Name",  bitstream.filename)
+            myMessageSection.addFact("BitStream Length", f"{bitstream.length} Bytes")
+
+        # Section Text
+        myMessageSection.text("Asset Metadata")
+        # Section Images
+        myMessageSection.addImage(f"https://ua.access.preservica.com/download/thumbnail/IO_{asset.reference}")
+        # Add your section to the connector card object before sending
+        myTeamsMessage.addSection(myMessageSection)
+        myTeamsMessage.addLinkButton("View the Asset in UA", f"https://ua.access.preservica.com/uncategorized/IO_{asset.reference}")
+        myTeamsMessage.summary("Test Message")
+         
+        myTeamsMessage.send()
+    
+    
+    def do_WORK(self, json_payload):
+        for reference in list(json_payload['events']):
+            ref = reference['entityRef']
+            asset = self.server.client.asset(ref)
+            teams_message(asset)
+
+if __name__ == '__main__':
+
+    config = configparser.ConfigParser(interpolation=configparser.Interpolation())
+    config.read('credentials.properties', encoding='utf-8')
+    secret_key = config['credentials']['secret.key']
+
+    if len(argv) > 1:
+        arg = argv[1].split(':')
+        BIND_HOST = arg[0]
+        PORT = int(arg[1])
+
+    print(f'Listening on http://{BIND_HOST}:{PORT}\n')
+
+    httpd = HTTPServer((BIND_HOST, PORT), MyWebHook)
+    httpd.secret_key = secret_key
+    httpd.client = EntityAPI()
+    httpd.serve_forever()
+
+```
+Every ingest now creates the following message in teams
+
+ ![Teams](/public/images/teams1.PNG)
