webhook blog updates

--- a/_drafts/2023-06-10-webhooks.md
+++ b/_drafts/2023-06-10-webhooks.md
@@ -247,3 +247,31 @@ if __name__ == '__main__':
 Every ingest now creates the following message in teams
 
  ![Teams](/public/images/teams1.PNG)
+
+### Event Driven Serverless Architecture 
+
+In the examples above, a web server is used to receive the web hook notifications. This can turn out to be
+inefficient as the web server needs to be running on a server even when no notifications are being sent.
+
+In turns out that webhooks are especially well suited to modern serverless architecture 
+such as Amazon Lambda and Azure Functions. Running a dedicated web server is inefficient and unnecessary.
+
+AWS Lambda and Azure Functions are code fragments which are triggered to run from external events 
+such as web hooks. This is a simple and cost-effective approach to processing events.
+
+* No application server provisioning and maintenance required 
+* Web server infrastructure is provided for you through the API Gateway
+* Only pay for the milliseconds used
+* Highly Scalable
+
+AWS has a dedicated set of infrastructure based on the [API Gateway](https://aws.amazon.com/api-gateway/) service 
+which allows public API endpoints to be created. These API endpoints act as the "front door" for the 
+webhook applications managing traffic management, CORS support, authorization and access control, 
+throttling, and monitoring etc.
+
+When the API gateway receives a webhook notification it will pass the message payload from Preservica to the 
+AWS Lambda function which will carry out the appropriate action.
+
+Lambda support multiple languages such as Java, Go, PowerShell, Node.js, C#, Python, and Ruby code, so you 
+build your applications in the language of your choice.
+
