webhook blog updates

--- a/_drafts/2023-06-10-webhooks.md
+++ b/_drafts/2023-06-10-webhooks.md
@@ -223,7 +223,7 @@ class MyWebHook(WebHookHandler):
         for reference in list(json_payload['events']):
             ref = reference['entityRef']
             asset = self.server.client.asset(ref)
-            teams_message(asset)
+            self.teams_message(asset)
 
 if __name__ == '__main__':
 
