webhook blog updates

--- a/_posts/2023-06-10-webhooks.md
+++ b/_posts/2023-06-10-webhooks.md
@@ -12,9 +12,10 @@ Webhooks are a type of API which allow apps to stay up-to-date with real-time in
 also called event-driven APIs and are typically used to provide other applications with real-time data.
 
 Using webhooks, applications can send you data automatically to 3rd party systems when certain events are triggered with
-Preservica.
+Preservica. Unlike the traditional process of “polling” in which a client asks the server if anything has changed, 
+web hooks automatically send out information to subscribed systems when certain events have happened.
 
-This allows to custom business processes to be created based on events within Preservica
+This allows to custom business processes to be created based on events within Preservica.
 
  ![Webhook](/public/images/webhook1.png)
 
@@ -27,8 +28,9 @@ Preservica is the publisher and will send messages to all registered subscribers
 triggered within the system.
 
 The key difference between webhooks and traditional APIs is Who triggers the process. 
-With traditional APIs the trigger is an event outside of Preservica and with webhooks the trigger is an 
+With traditional APIs the trigger is an event outside Preservica and with webhooks the trigger is an 
 event inside Preservica. The result is that you do not have to continually poll Preservica to get new information. 
+
 
 Webhooks work best when you need to take some action when something new has happened within Preservica.
 
@@ -61,12 +63,17 @@ subscribe method. This is then used by the subscriber to verify the messages sen
 
 Using the PyPreservica SDK to create a new subscription to Ingested events, you pass the address of a web service which
 can receive HTTP POST requests. This could be a web server or some API gateway service. If you use a web server it 
-must be a publicly accessible endpoint. If your running a local server for testing purposes it will need to use some 
+must provide a publicly accessible endpoint. If your running a local server for testing purposes it will need to use some 
 kind of ingress service to make your local server accessible.
 
+Along with the URL, you need to pass an argument which specifies which type of even you are interested in and the shared
+secret. The INDEXED event is triggered at the end of the ingest process after the content has been full text indexed and
+thumbnails are available.
+
+The Preservica Webhook API requires the user to have at least the repository manager role, ```ROLE_SDB_MANAGER_USER```
 
 ```python
-from pyPreservica import *
+from pyPreservica import WebHooksAPI
 
 webhook = WebHooksAPI()
 
@@ -90,7 +97,7 @@ The challenge response must take the form of a simple json document:
 ```
 
 where hexHmac256Response is a hex hmac256 of the challengeCode using the secret as the hmac key. Therefore,
-the server will need a copy of the secret key.
+the server process will need a copy of the secret key to verify requests.
 
 
 ### Receiving Events
@@ -107,7 +114,7 @@ This method is therefore where any processing takes place.
 
 class MyWebhook(WebHookHandler):
   def do_WORK(json):
-      # Do something useful
+    # Do something useful
    
 
 ```
@@ -267,11 +274,12 @@ such as web hooks. This is a simple and cost-effective approach to processing ev
 AWS has a dedicated set of infrastructure based on the [API Gateway](https://aws.amazon.com/api-gateway/) service 
 which allows public API endpoints to be created. These API endpoints act as the "front door" for the 
 webhook applications managing traffic management, CORS support, authorization and access control, 
-throttling, and monitoring etc.
+throttling, and monitoring etc. For the Preservica webhook use case the API gateway only needs to accept HTTP
+POST requests.
 
 When the API gateway receives a webhook notification it will pass the message payload from Preservica to the 
 AWS Lambda function which will carry out the appropriate action.
 
 Lambda support multiple languages such as Java, Go, PowerShell, Node.js, C#, Python, and Ruby code, so you 
-build your applications in the language of your choice.
+can build your applications in the language of your choice.
 
