webhook blog updates

--- a/_posts/2023-06-10-webhooks.md
+++ b/_posts/2023-06-10-webhooks.md
@@ -123,6 +123,66 @@ The handler can then be used to create a web server, the web server should be ru
 pyPreservica credential.properties file containing the shared secret which was used earlier to create 
 the web hook subscription.
 
+The WebHookHandler extends the BaseHTTPRequestHandler base class and will provide the handshake and 
+message verification automatically. Only verified messages are actioned.  This class is part of the pyPreservica SDK.
+
+```python
+import json
+from http.server import BaseHTTPRequestHandler
+from urllib.parse import urlparse, parse_qs
+import hmac
+from pyPreservica.common import *
+
+class WebHookHandler(BaseHTTPRequestHandler):
+    """
+    A sample web hook web server which provides handshake verification
+    The shared secret key is passed in via the HTTPServer
+
+    Extend the class and implement do_WORK() method
+    The JSON document is passed into do_WORK()
+
+    """
+
+    def hmac(self, key, message):
+        return hmac.new(key=bytes(key, 'latin-1'), msg=bytes(message, 'latin-1'), digestmod=hashlib.sha256).hexdigest()
+
+    def do_POST(self):
+        result = urlparse(self.path)
+        q = parse_qs(result.query)
+        if 'challengeCode' in q:
+            code = q['challengeCode'][0]
+            signature = self.hmac(self.server.secret_key, code)
+            response = f'{{ "challengeCode": "{code}",     "challengeResponse": "{signature}" }}'
+            self.send_response(200)
+            self.send_header("Content-type", "application/json")
+            self.end_headers()
+            self.wfile.write(bytes(response.encode('utf-8')))
+            self.log_message(f"Handshake Completed. {response.encode('utf-8')}")
+        else:
+            verif_sig = self.headers.get("Preservica-Signature", None)
+            if "chunked" in self.headers.get("Transfer-Encoding", "") and (verif_sig is not None):
+                payload = ""
+                while True:
+                    line = self.rfile.readline().strip()
+                    chunk_length = int(line, 16)
+                    if chunk_length != 0:
+                        chunk = self.rfile.read(chunk_length)
+                        payload = payload + chunk.decode("utf-8")
+                    self.rfile.readline()
+                    if chunk_length == 0:
+                        verify_body = f"preservica-webhook-auth{payload}"
+                        signature = self.hmac(self.server.secret_key, verify_body)
+                        if signature == verif_sig:
+                            self.log_message("Signature Verified. Doing Work...")
+                            self.log_message(payload)
+                            self.send_response(200)
+                            self.end_headers()
+                            self.do_WORK(json.loads(payload))
+                        break
+
+
+```
+
 The following is an example Python web server which can respond to Preservica web hooks.
 In this example the web hook server downloads the thumbnail image for every ingested asset.
 
@@ -165,7 +225,7 @@ if __name__ == '__main__':
 The web server can be then be started from the command line using.
 
 
-```bash
+```commandline
   $ python3 server.py 0.0.0.0:8000
 ```
 
