webhook blog updates

--- a/_posts/2023-06-10-webhooks.md
+++ b/_posts/2023-06-10-webhooks.md
@@ -85,10 +85,11 @@ endpoint URL to verify that it exists.
 
 Preservica will make a POST request to the URL with a challengeCode query parameter. 
 The server must respond with the expected challenge response or the subscription will fail. 
-The challenge response must take the form of a simple json document:
+The challenge response must take the form of a simple json document
 
 
-```python
+```json
+
 {
   "challengeCode": "challengeCode",
   "challengeResponse": "hexHmac256Response"
