webhook blog updates

--- a/_posts/2023-06-10-webhooks.md
+++ b/_posts/2023-06-10-webhooks.md
@@ -88,7 +88,7 @@ The server must respond with the expected challenge response or the subscription
 The challenge response must take the form of a simple json document
 
 
-```json
+```python
 
 {
   "challengeCode": "challengeCode",
@@ -227,7 +227,9 @@ The web server can be then be started from the command line using.
 
 
 ```commandline
+
   $ python3 server.py 0.0.0.0:8000
+
 ```
 
 ### Use Case:  Custom Notifications
