webhook blog updates

--- a/_posts/2023-06-10-webhooks.md
+++ b/_posts/2023-06-10-webhooks.md
@@ -88,7 +88,7 @@ The server must respond with the expected challenge response or the subscription
 The challenge response must take the form of a simple json document
 
 
-```python
+```json
 
 {
   "challengeCode": "challengeCode",
@@ -128,6 +128,7 @@ The WebHookHandler extends the BaseHTTPRequestHandler base class and will provid
 message verification automatically. Only verified messages are actioned.  This class is part of the pyPreservica SDK.
 
 ```python
+{% raw %}
 import json
 from http.server import BaseHTTPRequestHandler
 from urllib.parse import urlparse, parse_qs
@@ -181,7 +182,7 @@ class WebHookHandler(BaseHTTPRequestHandler):
                             self.do_WORK(json.loads(payload))
                         break
 
-
+{% endraw %}
 ```
 
 The following is an example Python web server which can respond to Preservica web hooks.
