webhook blog updates

--- a/_posts/2023-06-10-webhooks.md
+++ b/_posts/2023-06-10-webhooks.md
@@ -11,11 +11,11 @@ This article is a based on the talk of the same name given to the 2023 Preservic
 Webhooks are a type of API which allow apps to stay up-to-date with real-time information. Webhooks are 
 also called event-driven APIs and are typically used to provide other applications with real-time data.
 
-Using webhooks, applications can send you data automatically to 3rd party systems when certain events are triggered with
+Using webhooks, applications can send your data automatically to 3rd party systems when certain events are triggered with
 Preservica. Unlike the traditional process of “polling” in which a client asks the server if anything has changed, 
 web hooks automatically send out information to subscribed systems when certain events have happened.
 
-This allows to custom business processes to be created based on events within Preservica.
+This allows to custom business processes to be triggered based on events within Preservica.
 
  ![Webhook](/public/images/webhook1.png)
 
@@ -228,7 +228,18 @@ The web server can be then be started from the command line using.
 
 ```
 
-### Use Case:  Custom Notifications
+### Use Cases 
+
+The typical use case for web hooks is when you want to take some action after new material has been ingested into
+Preservica. For example, you may wish to add additional descriptive metadata to an Asset from an external metadata 
+management system. The list below provides a few examples of where a web hook may be more appropriate than a traditional 
+polling API.
+
+* Catalogue lookup after ingest
+* Transcribe video or audio after ingesting AV material
+* Send an automatically created access version of an Asset to a discovery platform 
+
+#### Custom Integrations
 
 This use case shows how we can chain webhooks together to allow 3rd party systems to communicate with each other.
 We are going to use Microsoft Teams as the 3rd party system as Teams provides incoming webhook functionality.
