webhook blog updates

--- a/_posts/2023-06-10-webhooks.md
+++ b/_posts/2023-06-10-webhooks.md
@@ -11,11 +11,10 @@ This article is a based on the talk of the same name given to the 2023 Preservic
 Webhooks are a type of API which allow apps to stay up-to-date with real-time information. Webhooks are 
 also called event-driven APIs and are typically used to provide other applications with real-time data.
 
-Using webhooks, applications can send your data automatically to 3rd party systems when certain events are triggered with
-Preservica. Unlike the traditional process of “polling” in which a client asks the server if anything has changed, 
-web hooks automatically send out information to subscribed systems when certain events have happened.
+Using webhooks, applications can send data automatically to 3rd party systems when certain events are triggered within
+an application. Unlike the traditional process of “polling” in which a client asks the application if anything has 
+changed, web hooks automatically send out information to subscribed systems when certain events have happened.
 
-This allows to custom business processes to be triggered based on events within Preservica.
 
  ![Webhook](/public/images/webhook1.png)
 
@@ -31,24 +30,26 @@ The key difference between webhooks and traditional APIs is Who triggers the pro
 With traditional APIs the trigger is an event outside Preservica and with webhooks the trigger is an 
 event inside Preservica. The result is that you do not have to continually poll Preservica to get new information. 
 
+This allows users to build custom business processes and workflows which are triggered based on events within Preservica.
 
 Webhooks work best when you need to take some action when something new has happened within Preservica.
 
-Preservica has provided two events as part of the first webhook release with Preservica v6.8
+Preservica has provided two events as part of the first webhook release with Preservica v6.8. More events will be
+added in future versions.
 
  
  * Ingesting Assets
-
  * Moving Assets
 
 
 ### Webhook Documentation
 
-The webhook API is documented in the official Preservica [Swagger pages](https://demo.preservica.com/api/webhook/documentation.html) and the 3rd party [pyPreservica](https://pypreservica.readthedocs.io/en/latest/webhooks.html) Python SDK
+The webhook API is documented in the official Preservica [Swagger pages](https://demo.preservica.com/api/webhook/documentation.html) 
+and the 3rd party [pyPreservica](https://pypreservica.readthedocs.io/en/latest/webhooks.html) Python SDK
 
  ![Swagger](/public/images/swagg1.png)
 
-The following examples will use the Preservica SDK [pyPreservica](https://pypreservica.readthedocs.io/en/latest/webhooks.html) 
+The following examples below will use the Preservica SDK [pyPreservica](https://pypreservica.readthedocs.io/en/latest/webhooks.html) 
 
  ![pyPreservica](/public/images/pyPreservica1.png)
 
@@ -57,36 +58,41 @@ The following examples will use the Preservica SDK [pyPreservica](https://pypres
 
 Before a system can receive notifications from Preservica, it must subscribe to a notification trigger.
 
-When creating a new subscription service, you need to generate a shared secret key and pass it as an argument to the 
+When creating a new subscription service, you need to generate a shared secret and pass it as an argument to the 
 subscribe method. This is then used by the subscriber to verify the messages sent by Preservica (publisher) are genuine 
-(to prevent spoofing attacks). 
+(to prevent spoofing attacks). Its known as a shared secret because its held by both the publisher (Preservica) and 
+the subscriber (web hook server).
 
 Using the PyPreservica SDK to create a new subscription to Ingested events, you pass the address of a web service which
 can receive HTTP POST requests. This could be a web server or some API gateway service. If you use a web server it 
-must provide a publicly accessible endpoint. If your running a local server for testing purposes it will need to use some 
-kind of ingress service to make your local server accessible.
+must provide a publicly accessible endpoint. If you are running a local server for testing purposes it will need to use some 
+kind of ingress service to make it publicly accessible.
 
-Along with the URL, you need to pass an argument which specifies which type of even you are interested in and the shared
-secret. The INDEXED event is triggered at the end of the ingest process after the content has been full text indexed and
+Along with the URL and the shared secret, you need to pass an argument which specifies which type of even you are interested in. 
+The INDEXED event is triggered at the end of the ingest process after the content has been full text indexed and
 thumbnails are available.
 
-The Preservica Webhook API requires the user to have at least the repository manager role, ```ROLE_SDB_MANAGER_USER```
+To use the Preservica Webhook API requires the user making the API call 
+to have at least the repository manager role, ```ROLE_SDB_MANAGER_USER```
+
+The following pyPreservica python script for creating a new subscription is 
 
 ```python
 from pyPreservica import WebHooksAPI
 
 webhook = WebHooksAPI()
 
-subscription = webhook.subscribe("http://my-webhook.com:8080", TriggerType.INDEXED, "my secret key!")
+subscription = webhook.subscribe("http://my-preservica-webhook.com:8080", TriggerType.INDEXED, "my secret key!")
 
 ```
-During the subscription process, Preservica will send a challenge response message to the specified 
-endpoint URL to verify that it exists. 
+where http://my-preservica-webhook.com:8080 is the web hook endpoint URL.
 
+During the subscription process, Preservica will send a challenge response message to the specified 
+endpoint URL to verify that it exists and its publicly accessible.  
 Preservica will make a POST request to the URL with a challengeCode query parameter. 
 The server must respond with the expected challenge response or the subscription will fail. 
-The challenge response must take the form of a simple json document
 
+The challenge response must take the form of a simple json document which is sent back to Preservica.
 
 ```json
 
@@ -97,8 +103,8 @@ The challenge response must take the form of a simple json document
 
 ```
 
-where hexHmac256Response is a hex hmac256 of the challengeCode using the secret as the hmac key. Therefore,
-the server process will need a copy of the secret key to verify requests.
+where hexHmac256Response is a hexadecimal encoded hmac256 of the challengeCode using the secret as the hmac key. 
+Therefore, the web hook process will need a copy of the secret key to verify requests.
 
 
 ### Receiving Events
